# queue-time-monitor

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: default.yaml
src/queue_monitor/: __init__.py  __main__.py  cli.py  config.py  pipeline.py
src/queue_monitor/detection/: detector.py  tracker.py  zone.py
src/queue_monitor/estimation/: counter.py  wait_time.py
src/queue_monitor/storage/: database.py
src/queue_monitor/video/: source.py
src/queue_monitor/web/: app.py  routes.py
src/queue_monitor/web/static/css/: style.css
src/queue_monitor/web/static/js/: dashboard.js
src/queue_monitor/web/templates/: configure.html  index.html
tests/: conftest.py  test_cli.py  test_config.py  test_counter.py  test_database.py  test_detector.py  test_pipeline.py  test_routes.py  test_source.py  test_tracker.py  test_wait_time.py  test_zone.py
